fix(assets): fixed assets not showing up on gh pages

--- a/frontend/ozomali/src/app/components/header-menu/header-menu.component.scss
+++ b/frontend/ozomali/src/app/components/header-menu/header-menu.component.scss
@@ -17,6 +17,7 @@
       margin: 0;
       padding: 15px 5px;
       cursor: pointer;
+      user-select: none;
     }
 
     &-image {
@@ -48,6 +49,7 @@
       padding: 5px 5px 35px;
       font-size: 36px;
       cursor: pointer;
+      user-select: none;
     }
 
     &-buttons {
